get user & create task
